--- a/index.mat.html
+++ b/index.mat.html
@@ -58,9 +58,9 @@
              [
              <a target="" href="http://service.tartaglialab.com/page/catrapid_group"><i>cat</i>RAPID home</a>
              -
-             <a target="" href="http://service.tartaglialab.com/static_files/shared/documentation_Omi-X.html">Documentation</a>
+             <a target="" href="http://service.tartaglialab.com/static_files/shared/documentation_omixcore.html">Documentation</a>
              -
-             <a target="" href="http://service.tartaglialab.com/static_files/shared/tutorial_Omi-X.html">Tutorial</a>
+             <a target="" href="http://service.tartaglialab.com/static_files/shared/tutorial_omixcore.html">Tutorial</a>
              -
              <a target="" href="http://pasteur.crg.es/portal/page/portal/827A462EAB6802B3E04012AC0E01291B">Group page @ CRG</a>
              ]
@@ -114,8 +114,8 @@
 							//Set code to run when the link is clicked
 							// by assigning a function to "onclick"
 							a.onclick = function() {
-								a.href="http://localhost:8081/new_submission/signal-localization/92909"
-								a.href="http://s.tartaglialab.com/new_submission/omix-signal-localization/{{randoms}}"
+								//a.href="http://localhost:8081/new_submission/signal-localization/92909"
+								a.href="http://s.tartaglialab.com/new_submission/signal-localization/{{randoms}}"
 								var checkedValue = '';
 								var inputElements = document.getElementsByClassName('rnaCheckbox');
 								for(var i=0; inputElements[i]; ++i){
