--- a/index.mat.html
+++ b/index.mat.html
@@ -115,7 +115,7 @@
 							// by assigning a function to "onclick"
 							a.onclick = function() {
 								//a.href="http://localhost:8081/new_submission/signal-localization/92909"
-								a.href="http://s.tartaglialab.com/new_submission/signal-localization/{{randoms}}"
+								a.href="http://service.tartaglialab.com/new_submission/signal-localization/{{randoms}}"
 								var checkedValue = '';
 								var inputElements = document.getElementsByClassName('rnaCheckbox');
 								for(var i=0; inputElements[i]; ++i){
