--- a/index.mat.html
+++ b/index.mat.html
@@ -12,6 +12,7 @@
     <!-- security start -->
     <script language="javascript" type="text/javascript" src="http://service.tartaglialab.com/static_files/js/md5-min.js"></script>
     <script language="javascript" type="text/javascript" src="http://service.tartaglialab.com/static_files/js/parseuri.js"></script>
+		<script src="http://service.tartaglialab.com/static_files/js/jquery.tablesorter.js" type="text/javascript"></script>
 		<script language="javascript" type="text/javascript" src="js/jquery.tablesorter.js"></script>
 		<script language="javascript" type="text/javascript" src="js/jquery.tablesorter.min.js"></script>
     <style type="text/css">
