--- a/index.mat.html
+++ b/index.mat.html
@@ -57,7 +57,7 @@
         <div id="navbar_server">
             <h3>
              [
-             <a target="" href="http://service.tartaglialab.com/page/catrapid_group"><i>cat</i>RAPID home</a>
+             <a target="" href="http://service.tartaglialab.com/new_submission/omixcore">OmiXcore home</a>
              -
              <a target="" href="http://service.tartaglialab.com/static_files/shared/documentation_omixcore.html">Documentation</a>
              -
@@ -76,7 +76,6 @@
             <p>ID: {{randoms}}<br />
                 User label: {{title}}<br />
                 <a href="protein.fasta">Protein sequence</a><br />
-                <a href="rna.fasta">Transcript sequence</a><br />
                 Generated: {{generated}}<br />
             </p>
         </span>
