--- a/index.mat.html
+++ b/index.mat.html
@@ -8,13 +8,15 @@
 </head>
 
 <body>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
-    <!-- security start -->
-    <script language="javascript" type="text/javascript" src="http://service.tartaglialab.com/static_files/js/md5-min.js"></script>
-    <script language="javascript" type="text/javascript" src="http://service.tartaglialab.com/static_files/js/parseuri.js"></script>
-		<script src="http://service.tartaglialab.com/static_files/js/jquery.tablesorter.js" type="text/javascript"></script>
-		<script language="javascript" type="text/javascript" src="js/jquery.tablesorter.js"></script>
-		<script language="javascript" type="text/javascript" src="js/jquery.tablesorter.min.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
+	<!-- security start -->
+	<script language="javascript" type="text/javascript" src="http://service.tartaglialab.com/static_files/js/md5-min.js"></script>
+	<script language="javascript" type="text/javascript" src="http://service.tartaglialab.com/static_files/js/parseuri.js"></script>
+	<script language="javascript" type="text/javascript" src="http://service.tartaglialab.com/static_files/js/jRating.jquery.js"></script>
+	<script language="javascript" type="text/javascript" src="http://service.tartaglialab.com/static_files/js/jquery.flot.js"></script>
+	<script language="javascript" type="text/javascript" src="http://service.tartaglialab.com/static_files/js/jquery.flot.axislabels.js"></script>
+	<script language="javascript" type="text/javascript" src="http://service.tartaglialab.com/static_files/js/jquery.metadata.js"></script>
+	<script type="text/javascript" src="http://service.tartaglialab.com/static_files/js/jquery.tablesorter.js" ></script>
     <style type="text/css">
         body {
             /*hide main content */
@@ -81,124 +83,137 @@
         </span>
         <br />
 
-		<div style="height:500px; overflow:auto;">
+				<div style="height:200px; overflow:auto;">
+					<table cellpadding="0" cellspacing="0" border="0" id="myTable" class="tablesorter">
+							<thead>
+								<tr>
+									<th></th>
+									<th class="nosort">Transcript</th>
+									<th class="nosort">Interaction score</th>
 
-			<table cellpadding="0" cellspacing="0" border="0" id="myTable" class="tablesorter">
-					<thead>
-						<tr>
-							<th></th>
-							<th class="nosort"><p align="center" color="firebrick">Transcript</p></th>
-							<th class="nosort"><p align="center" color="firebrick">Interaction score</p></th>
+								</tr>
+							</thead>
+							<tbody id="rna_ids">
+							</tbody>
+					</table>
 
-						</tr>
-					</thead>
-					<tbody id="rna_ids">
-					</tbody>
-				</table>
-				<br>
-				<br>
-	         <p>Would you like to continue with the  <a id="mylink" href="">signal localization?</a> </p>
-        <br>
-	 			<br>
-				<script type="text/javascript" src="script.js"></script>
-				<script type="text/javascript">
-					rna_ids = Array()
-					full_url = $(location).attr('href')
-					url_directory = full_url.split('/').slice(0, -1).join('/')
-					window.onload = function() {
+					<div style="clear:both;">
+						<br>
+				</div>
+			</div>
+					<br>
+					<br>
+						 <p>Would you like to continue with the  <a id="mylink" href="">signal localization?</a> </p>
+					<br>
+					<br>
+					<script type="text/javascript" src="script.js"></script>
+					<script type="text/javascript">
 
-							//Get a reference to the link on the page
-							// with an id of "mylink"
-							var a = document.getElementById("mylink");
+						rna_ids = Array()
+						full_url = $(location).attr('href')
+						url_directory = full_url.split('/').slice(0, -1).join('/')
+						window.onload = function() {
 
-							//Set code to run when the link is clicked
-							// by assigning a function to "onclick"
-							a.onclick = function() {
-								//a.href="http://localhost:8081/new_submission/signal-localization/92909"
-								a.href="http://service.tartaglialab.com/new_submission/signal-localization/{{randoms}}"
-								var checkedValue = '';
-								var inputElements = document.getElementsByClassName('rnaCheckbox');
-								for(var i=0; inputElements[i]; ++i){
-								      if(inputElements[i].checked){
-												checkedValue=checkedValue.concat(inputElements[i].value,'_')
-								      }
-								}
-								checkedValue=checkedValue.substring(0, checkedValue.length - 1);
-								if(checkedValue.length>1){
-									a.href=a.href.concat('/',checkedValue)
-									return true
-								}
-								else{
-									alert("Choose at least one transcript to proceed!")
-									return false;
+								//Get a reference to the link on the page
+								// with an id of "mylink"
+								var a = document.getElementById("mylink");
+
+								//Set code to run when the link is clicked
+								// by assigning a function to "onclick"
+								a.onclick = function() {
+									//a.href="http://localhost:8081/new_submission/signal-localization/92909"
+									a.href="http://service.tartaglialab.com/new_submission/signal-localization/95634"
+									var checkedValue = '';
+									var inputElements = document.getElementsByClassName('rnaCheckbox');
+									for(var i=0; inputElements[i]; ++i){
+												if(inputElements[i].checked){
+													checkedValue=checkedValue.concat(inputElements[i].value,'_')
+												}
+									}
+									checkedValue=checkedValue.substring(0, checkedValue.length - 1);
+									if(checkedValue.length>1){
+										a.href=a.href.concat('/',checkedValue)
+										return true
+									}
+									else{
+										alert("Choose at least one transcript to proceed!")
+										return false;
+									}
 								}
 							}
-						}
 
-						$().ready(function() {
-							initialise_table()
-								sorter = new TINY.table.sorter("sorter");
-								sorter.head = "head";
-								sorter.asc = "asc";
-								sorter.desc = "desc";
-								sorter.even = "evenrow";
-								sorter.odd = "oddrow";
-								sorter.evensel = "evenselected";
-								sorter.oddsel = "oddselected";
-								sorter.paginate = true;
-								sorter.currentid = "currentpage";
-								sorter.limitid = "pagelimit";
-								sorter.init("table",0);
-						})
+							$().ready(function() {
+									initialise_table()
 
-						function initialise_table() {
+									$('#myTable').tablesorter({
+											widgets: ['zebra'],
+											widgetZebra: {css: ["NormRow","AltRow"]} // css classes to apply to rows
+									});
+								//function_init_sorter()
 
-
-								fetch_url = url_directory+"/transcript.rows"
-								jQuery.ajax({
-										 url: fetch_url,
-										 dataType: 'json',
-										 success: function(result) {
-																	rna_ids = result
-
-															},
-										 error: function() {
-												 alert("error loading protein definition")
-										 },
-										 async:   false
-								});
-
-								for (i = 0; i < rna_ids.length; i++) {
-										var cur_li = "<tr><td>"
-										cur_li += "<input class='rnaCheckbox' type='checkbox' value="+rna_ids[i][0]+">"
-										cur_li += "</td>"
-										cur_li += "<td>"+rna_ids[i][0]
-										cur_li += "</td>"
-										cur_li += "<td>"+ rna_ids[i][1]
-										cur_li += "</td>"
-										cur_li += "</tr>"
-										$("#rna_ids").append(cur_li)
-								}
-								$('input[type=checkbox]').on('change', function (e) {
-				    				if ($('input[type=checkbox]:checked').length > 5) {
-				        			$(this).prop('checked', false);
-				        			alert("allowed only 5");
-				    				}
-								});
-
+							});
+							function function_init_sorter() {
+									sorter = new TINY.table.sorter("sorter");
+									sorter.head = "head";
+									sorter.asc = "asc";
+									sorter.desc = "desc";
+									sorter.even = "evenrow";
+									sorter.odd = "oddrow";
+									sorter.evensel = "evenselected";
+									sorter.oddsel = "oddselected";
+									sorter.paginate = true;
+									sorter.currentid = "currentpage";
+									sorter.limitid = "pagelimit";
+									sorter.init("myTable",1);
 							}
 
+							function initialise_table() {
 
-                </script>
-            </div>
-            <div style="clear:both;"></div>
-        </div>
 
-        <div id="footer_main">
-            <hr>
-            <p>&copy; 2016 - <a href="http://big.crg.cat/gene_function_and_evolution" target="_blank">Gene Function and Evolution</a> - <a href="http://www.crg.eu" target="_blank">Center for Genomic Regulation (CRG)</a></p>
-        </div>
-    </div>
+									fetch_url = url_directory+"/transcript.rows"
+									jQuery.ajax({
+											 url: fetch_url,
+											 dataType: 'json',
+											 success: function(result) {
+																		rna_ids = result
 
-</body>
-</html>
+																},
+											 error: function() {
+													 alert("error loading protein definition")
+											 },
+											 async:   false
+									});
+
+									for (i = 0; i < rna_ids.length; i++) {
+											var cur_li = "<tr><td>"
+											cur_li += "<input class='rnaCheckbox' type='checkbox' value="+rna_ids[i][0]+">"
+											cur_li += "</td>"
+											cur_li += "<td>"+rna_ids[i][0]
+											cur_li += "</td>"
+											cur_li += "<td>"+ rna_ids[i][1]
+											cur_li += "</td>"
+											cur_li += "</tr>"
+											$("#rna_ids").append(cur_li)
+									}
+									$('input[type=checkbox]').on('change', function (e) {
+											if ($('input[type=checkbox]:checked').length > 5) {
+												$(this).prop('checked', false);
+												alert("allowed only 5");
+											}
+
+									});
+
+
+									//$("#myTable").tablesorter();
+								}
+
+
+						</script>
+					<div id="footer_main">
+							<hr>
+							<p>&copy; 2016 - <a href="http://big.crg.cat/gene_function_and_evolution" target="_blank">Gene Function and Evolution</a> - <a href="http://www.crg.eu" target="_blank">Center for Genomic Regulation (CRG)</a></p>
+					</div>
+			</div>
+
+		</body>
+		</html>
