--- a/index.mat.html
+++ b/index.mat.html
@@ -54,7 +54,7 @@
             <p><a href="http://service.tartaglialab.com/">Portal Home</a></p>
         </div>
         <div id="title_server">
-            <h1>Omi-X</h1>
+            <h1>OmiXcore</h1>
         </div>
         <div id="navbar_server">
             <h3>
@@ -83,7 +83,7 @@
         </span>
         <br />
 
-				<div style="height:200px; overflow:auto;">
+				<div style="height:400px; overflow:auto;">
 					<table cellpadding="0" cellspacing="0" border="0" id="myTable" class="tablesorter">
 							<thead>
 								<tr>
