--- a/index.error.html
+++ b/index.error.html
@@ -53,16 +53,15 @@
 		</div>
 		<div id="navbar_server">
 			<h3>
-
-			[
-                            <a target="" href="http://service.tartaglialab.com/page/catrapid_group"><i>cat</i>RAPID home</a>
-                             -
-                            <a target="" href="http://service.tartaglialab.com/static_files/shared/documentation.html#8">Documentation</a>
-                             -
-                            <a target="" href="http://service.tartaglialab.com/static_files/shared/tutorial_globalscore.html#5">Tutorial</a>
-                             -
-                            <a target="" href="http://pasteur.crg.es/portal/page/portal/827A462EAB6802B3E04012AC0E01291B">Group page @ CRG</a>
-        	]
+			 [
+			 <a target="" href="http://service.tartaglialab.com/new_submission/omixcore">OmiXcore home</a>
+			 -
+			 <a target="" href="http://service.tartaglialab.com/static_files/shared/documentation_omixcore.html">Documentation</a>
+			 -
+			 <a target="" href="http://service.tartaglialab.com/static_files/shared/tutorial_omixcore.html">Tutorial</a>
+			 -
+			 <a target="" href="http://pasteur.crg.es/portal/page/portal/827A462EAB6802B3E04012AC0E01291B">Group page @ CRG</a>
+			 ]
 			</h3>
 		</div>
 	</div>
@@ -74,7 +73,7 @@
         <h4>Information about the JOB:</h4>
         <p>ID: {{randoms}}<br />
         User label: {{title}}<br />
-        <a href="protein.fasta">Protein sequence</a><br />
+
         Generated: {{generated}}<br />
         </p>
         </span>
