--- a/index.mat.html
+++ b/index.mat.html
@@ -208,15 +208,15 @@
 											cur_li += "</tr>"
 											$("#rna_ids").append(cur_li)
 									}
-									/*
+
 									$('input[type=checkbox]').on('change', function (e) {
-											if ($('input[type=checkbox]:checked').length > 50) {
+											if ($('input[type=checkbox]:checked').length > 10) {
 												$(this).prop('checked', false);
-												alert("maximum selected: 50");
+												alert("Maximum to be selected: 10");
 											}
 
 									});
-									*/
+
 
 									//$("#myTable").tablesorter();
 								}
