1st commit, dataset refernse mode

--- a/index.mat.html
+++ b/index.mat.html
@@ -124,7 +124,7 @@
 
 															},
 										 error: function() {
-												 alert("error loading ,ode function")
+												 alert("error loading ,mode function")
 										 },
 										 async:   false
 								});
