error mesages and html

--- a/index.error.html
+++ b/index.error.html
@@ -80,7 +80,7 @@
         <br />
 
 
-	<h2 align="center">There was a problem with your submission. Please check again and re-submit! </br></p>
+	<h2 align="center"> {{error_message}} </br></p>
 	</br></p>
 
   </h2>
