omixcore error html and rna handling

--- a/index.error.html
+++ b/index.error.html
@@ -73,7 +73,8 @@
         <h4>Information about the JOB:</h4>
         <p>ID: {{randoms}}<br />
         User label: {{title}}<br />
-
+				<a href="protein.fasta">Protein submitted sequence</a><br />
+				<a href="Submission_rna.fasta">RNA submitted sequences</a><br />
         Generated: {{generated}}<br />
         </p>
         </span>
