--- a/index.mat.html
+++ b/index.mat.html
@@ -78,6 +78,8 @@
             <p>ID: {{randoms}}<br />
                 User label: {{title}}<br />
                 <a href="protein.fasta">Protein sequence</a><br />
+								<a href="Submission_rna.fasta">RNA submitted sequences</a><br />
+								<a href="rna.fasta">RNA valid sequences</a><br />
                 Generated: {{generated}}<br />
             </p>
         </span>
